documentation update for 5.5.2.rc2

--- a/man/netsnmp_access_multiplexer.3
+++ b/man/netsnmp_access_multiplexer.3
@@ -1,4 +1,4 @@
-.TH "baby_steps_access_multiplexer: calls individual access methods based on baby_step mode." 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "baby_steps_access_multiplexer: calls individual access methods based on baby_step mode." 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -16,7 +16,7 @@ baby_steps_access_multiplexer: calls individual access methods based on baby_ste
 .in -1c
 .SH "Function Documentation"
 .PP 
-.SS "\fBnetsnmp_mib_handler\fP* netsnmp_baby_steps_access_multiplexer_get (\fBnetsnmp_baby_steps_access_methods\fP *am)"
+.SS "\fBnetsnmp_mib_handler\fP* netsnmp_baby_steps_access_multiplexer_get (\fBnetsnmp_baby_steps_access_methods\fP * am)"
 .PP
 returns a baby_steps handler that can be injected into a given handler chain. 
 .PP
