--- a/man/netsnmp_netsnmp_monitor_callback_header_s.3
+++ b/man/netsnmp_netsnmp_monitor_callback_header_s.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_monitor_callback_header_s" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_monitor_callback_header_s" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -69,7 +69,7 @@ Definition at line 79 of file object_monitor.h.
 priority 
 .PP
 Definition at line 73 of file object_monitor.h.
-.SS "struct \fBnetsnmp_monitor_callback_header_s\fP* \fBnetsnmp_monitor_callback_header_s::private\fP"
+.SS "struct \fBnetsnmp_monitor_callback_header_s\fP* \fBnetsnmp_monitor_callback_header_s::private\fP\fC [read]\fP"
 .PP
 DO NOT USE, INTERNAL USE ONLY. 
 .PP
