--- a/man/netsnmp_scalar_group_group.3
+++ b/man/netsnmp_scalar_group_group.3
@@ -1,4 +1,4 @@
-.TH "scalar_group" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "scalar_group" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
