--- a/man/netsnmp_data_list.3
+++ b/man/netsnmp_data_list.3
@@ -1,4 +1,4 @@
-.TH "generic linked-list data handling with a string as a key." 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "generic linked-list data handling with a string as a key." 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -9,7 +9,7 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_free_list_data\fP (\fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
-.RI "\fIfrees the data and a name at a given data_list node. \fP"
+.RI "\fIfrees the data and a name at a given data_list \fBnode\fP. \fP"
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_free_all_list_data\fP (\fBnetsnmp_data_list\fP *head)"
 .br
@@ -17,7 +17,7 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "NETSNMP_INLINE \fBnetsnmp_data_list\fP * \fBnetsnmp_create_data_list\fP (const char *name, void *data, Netsnmp_Free_List_Data *beer)"
 .br
-.RI "\fIadds creates a data_list node given a name, data and a free function ptr. \fP"
+.RI "\fIadds creates a data_list \fBnode\fP given a name, data and a free function ptr. \fP"
 .ti -1c
 .RI "NETSNMP_INLINE void \fBnetsnmp_data_list_add_node\fP (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *\fBnode\fP)"
 .br
@@ -37,11 +37,11 @@ generic linked-list data handling with a string as a key. \-
 .ti -1c
 .RI "NETSNMP_INLINE \fBnetsnmp_data_list\fP * \fBnetsnmp_get_list_node\fP (\fBnetsnmp_data_list\fP *head, const char *name)"
 .br
-.RI "\fIreturns a data_list node for a given name within a data_list \fP"
+.RI "\fIreturns a data_list \fBnode\fP for a given name within a data_list \fP"
 .ti -1c
 .RI "int \fBnetsnmp_remove_list_node\fP (\fBnetsnmp_data_list\fP **realhead, const char *name)"
 .br
-.RI "\fIRemoves a named node from a data_list (and frees it) \fP"
+.RI "\fIRemoves a named \fBnode\fP from a data_list (and frees it). \fP"
 .ti -1c
 .RI "void \fBnetsnmp_register_save_list\fP (\fBnetsnmp_data_list\fP **datalist, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr, Netsnmp_Read_List_Data *data_list_read_ptr, Netsnmp_Free_List_Data *data_list_free_ptr)"
 .br
@@ -61,7 +61,7 @@ generic linked-list data handling with a string as a key. \-
 .in -1c
 .SH "Function Documentation"
 .PP 
-.SS "NETSNMP_INLINE void netsnmp_add_list_data (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
+.SS "NETSNMP_INLINE void netsnmp_add_list_data (\fBnetsnmp_data_list\fP ** head, \fBnetsnmp_data_list\fP * node)"
 .PP
 adds data to a datalist depreciated: use \fBnetsnmp_data_list_add_node()\fP
 .PP
@@ -72,19 +72,19 @@ netsnmp_data_list_add_node is preferred
 .PP
 \fBParameters:\fP
 .RS 4
-\fIhead\fP a pointer to the head node of a data_list 
+\fIhead\fP a pointer to the head \fBnode\fP of a data_list 
 .br
-\fInode\fP a node to stash in the data_list 
+\fI\fBnode\fP\fP a \fBnode\fP to stash in the data_list 
 .RE
 .PP
 
 .PP
 Definition at line 121 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_create_data_list (const char *name, void *data, Netsnmp_Free_List_Data *beer)"
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_create_data_list (const char * name, void * data, Netsnmp_Free_List_Data * beer)"
 .PP
-adds creates a data_list node given a name, data and a free function ptr. \fBParameters:\fP
+adds creates a data_list \fBnode\fP given a name, data and a free function ptr. \fBParameters:\fP
 .RS 4
-\fIname\fP the name of the node to cache the data. 
+\fIname\fP the name of the \fBnode\fP to cache the data. 
 .br
 \fIdata\fP the data to be stored under that name 
 .br
@@ -93,7 +93,7 @@ adds creates a data_list node given a name, data and a free function ptr. \fBPar
 .PP
 \fBReturns:\fP
 .RS 4
-a newly created data_list node which can be given to the netsnmp_add_list_data function. 
+a newly created data_list \fBnode\fP which can be given to the netsnmp_add_list_data function. 
 .RE
 .PP
 
@@ -103,13 +103,13 @@ a newly created data_list node which can be given to the netsnmp_add_list_data f
 \fBdelayed_instance.c\fP.
 .PP
 Definition at line 53 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_data_list_add_data (\fBnetsnmp_data_list\fP **head, const char *name, void *data, Netsnmp_Free_List_Data *beer)"
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_data_list_add_data (\fBnetsnmp_data_list\fP ** head, const char * name, void * data, Netsnmp_Free_List_Data * beer)"
 .PP
 adds data to a datalist \fBParameters:\fP
 .RS 4
-\fIhead\fP a pointer to the head node of a data_list 
+\fIhead\fP a pointer to the head \fBnode\fP of a data_list 
 .br
-\fIname\fP the name of the node to cache the data. 
+\fIname\fP the name of the \fBnode\fP to cache the data. 
 .br
 \fIdata\fP the data to be stored under that name 
 .br
@@ -118,81 +118,81 @@ adds data to a datalist \fBParameters:\fP
 .PP
 \fBReturns:\fP
 .RS 4
-a newly created data_list node which was inserted in the list 
+a newly created data_list \fBnode\fP which was inserted in the list 
 .RE
 .PP
 
 .PP
 Definition at line 134 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_data_list_add_node (\fBnetsnmp_data_list\fP **head, \fBnetsnmp_data_list\fP *node)"
+.SS "NETSNMP_INLINE void netsnmp_data_list_add_node (\fBnetsnmp_data_list\fP ** head, \fBnetsnmp_data_list\fP * node)"
 .PP
 adds data to a datalist \fBParameters:\fP
 .RS 4
-\fIhead\fP a pointer to the head node of a data_list 
+\fIhead\fP a pointer to the head \fBnode\fP of a data_list 
 .br
-\fInode\fP a node to stash in the data_list 
+\fI\fBnode\fP\fP a \fBnode\fP to stash in the data_list 
 .RE
 .PP
 
 .PP
 Definition at line 78 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_free_all_list_data (\fBnetsnmp_data_list\fP *head)"
+.SS "NETSNMP_INLINE void netsnmp_free_all_list_data (\fBnetsnmp_data_list\fP * head)"
 .PP
 frees all data and nodes in a list. \fBParameters:\fP
 .RS 4
-\fIhead\fP the top node of the list to be freed. 
+\fIhead\fP the top \fBnode\fP of the list to be freed. 
 .RE
 .PP
 
 .PP
 Definition at line 35 of file data_list.c.
-.SS "NETSNMP_INLINE void netsnmp_free_list_data (\fBnetsnmp_data_list\fP *node)"
+.SS "NETSNMP_INLINE void netsnmp_free_list_data (\fBnetsnmp_data_list\fP * node)"
 .PP
-frees the data and a name at a given data_list node. Note that this doesn't free the node itself. 
+frees the data and a name at a given data_list \fBnode\fP. Note that this doesn't free the \fBnode\fP itself. 
 .PP
 \fBParameters:\fP
 .RS 4
-\fInode\fP the node for which the data should be freed 
+\fI\fBnode\fP\fP the \fBnode\fP for which the data should be freed 
 .RE
 .PP
 
 .PP
 Definition at line 19 of file data_list.c.
-.SS "NETSNMP_INLINE void* netsnmp_get_list_data (\fBnetsnmp_data_list\fP *head, const char *name)"
+.SS "NETSNMP_INLINE void* netsnmp_get_list_data (\fBnetsnmp_data_list\fP * head, const char * name)"
 .PP
 returns a data_list node's data for a given name within a data_list \fBParameters:\fP
 .RS 4
-\fIhead\fP the head node of a data_list 
+\fIhead\fP the head \fBnode\fP of a data_list 
 .br
 \fIname\fP the name to find 
 .RE
 .PP
 \fBReturns:\fP
 .RS 4
-a pointer to the data cached at that node 
+a pointer to the data cached at that \fBnode\fP 
 .RE
 .PP
 
 .PP
 Definition at line 159 of file data_list.c.
-.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_get_list_node (\fBnetsnmp_data_list\fP *head, const char *name)"
+.SS "NETSNMP_INLINE \fBnetsnmp_data_list\fP* netsnmp_get_list_node (\fBnetsnmp_data_list\fP * head, const char * name)"
 .PP
-returns a data_list node for a given name within a data_list \fBParameters:\fP
+returns a data_list \fBnode\fP for a given name within a data_list \fBParameters:\fP
 .RS 4
-\fIhead\fP the head node of a data_list 
+\fIhead\fP the head \fBnode\fP of a data_list 
 .br
 \fIname\fP the name to find 
 .RE
 .PP
 \fBReturns:\fP
 .RS 4
-a pointer to the data_list node 
+a pointer to the data_list \fBnode\fP 
 .RE
 .PP
 
 .PP
 Definition at line 177 of file data_list.c.
-.SS "void netsnmp_read_data_callback (const char *token, char *line)"
+.SS "void netsnmp_read_data_callback (const char * token, char * line)"
 .PP
 intended to be registerd as a .conf parser It should be registered using: register_app_config_handler('token', netsnmp_read_data_callback, XXX)
 .PP
@@ -206,7 +206,7 @@ make netsnmp_read_data_callback deal with a free routine
 
 .PP
 Definition at line 335 of file data_list.c.
-.SS "void netsnmp_register_save_list (\fBnetsnmp_data_list\fP **datalist, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr, Netsnmp_Read_List_Data *data_list_read_ptr, Netsnmp_Free_List_Data *data_list_free_ptr)"
+.SS "void netsnmp_register_save_list (\fBnetsnmp_data_list\fP ** datalist, const char * type, const char * token, Netsnmp_Save_List_Data * data_list_save_ptr, Netsnmp_Read_List_Data * data_list_read_ptr, Netsnmp_Free_List_Data * data_list_free_ptr)"
 .PP
 registers to store a data_list set of data at persistent storage time \fBParameters:\fP
 .RS 4
@@ -220,7 +220,7 @@ registers to store a data_list set of data at persistent storage time \fBParamet
 .br
 \fIdata_list_read_ptr\fP a function pointer which can read the remainder of a saved line and return the application specific void * pointer. 
 .br
-\fIdata_list_free_ptr\fP a function pointer which will be passed to the data node for freeing it in the future when/if the list/node is cleaned up or destroyed. 
+\fIdata_list_free_ptr\fP a function pointer which will be passed to the data \fBnode\fP for freeing it in the future when/if the list/node is cleaned up or destroyed. 
 .RE
 .PP
 
@@ -233,11 +233,11 @@ netsnmp_register_save_list should handle the same token name being saved from di
 
 .PP
 Definition at line 228 of file data_list.c.
-.SS "int netsnmp_remove_list_node (\fBnetsnmp_data_list\fP **realhead, const char *name)"
+.SS "int netsnmp_remove_list_node (\fBnetsnmp_data_list\fP ** realhead, const char * name)"
 .PP
-Removes a named node from a data_list (and frees it) \fBParameters:\fP
+Removes a named \fBnode\fP from a data_list (and frees it). \fBParameters:\fP
 .RS 4
-\fIrealhead\fP a pointer to the head node of a data_list 
+\fIrealhead\fP a pointer to the head \fBnode\fP of a data_list 
 .br
 \fIname\fP the name to find and remove 
 .RE
@@ -250,12 +250,12 @@ Removes a named node from a data_list (and frees it) \fBParameters:\fP
 
 .PP
 Definition at line 195 of file data_list.c.
-.SS "int netsnmp_save_all_data (\fBnetsnmp_data_list\fP *head, const char *type, const char *token, Netsnmp_Save_List_Data *data_list_save_ptr)"
+.SS "int netsnmp_save_all_data (\fBnetsnmp_data_list\fP * head, const char * type, const char * token, Netsnmp_Save_List_Data * data_list_save_ptr)"
 .PP
 intended to be called as a callback during persistent save operations. See the netsnmp_save_all_data_callback for where this is typically used. 
 .PP
 Definition at line 299 of file data_list.c.
-.SS "int netsnmp_save_all_data_callback (intmajor, intminor, void *serverarg, void *clientarg)"
+.SS "int netsnmp_save_all_data_callback (int major, int minor, void * serverarg, void * clientarg)"
 .PP
 intended to be registerd as a callback operation. It should be registered using:
 .PP
