--- a/man/netsnmp_leaf.3
+++ b/man/netsnmp_leaf.3
@@ -1,4 +1,4 @@
-.TH "leaf_handlers" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "leaf_handlers" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -32,7 +32,7 @@ Process individual leaf objects A group of handlers to implement individual leaf
 .br
 .PP
 
-.RI "\fIWatch a specified variable and process it as an instance or scalar object. \fP"
+.RI "\fIWatch a specified \fBvariable\fP and process it as an instance or scalar object. \fP"
 .in -1c
 .SH "Detailed Description"
 .PP 
