--- a/man/netsnmp_library.3
+++ b/man/netsnmp_library.3
@@ -1,4 +1,4 @@
-.TH "The Net-SNMP library" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "The Net-SNMP library" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -33,7 +33,7 @@ The Net-SNMP library \-
 .br
 .PP
 
-.RI "\fIThe purpose of the default storage is three-fold: \fP"
+.RI "\fIThe purpose of the default storage is three-fold:. \fP"
 .ti -1c
 .RI "\fBmib parsing and datatype manipulation routines.\fP"
 .br
@@ -93,21 +93,6 @@ The Net-SNMP library \-
 .RI "#define \fBBSD4_2\fP"
 .br
 .ti -1c
-.RI "#define \fBNFDBITS\fP   (sizeof(fd_mask) * NBBY)"
-.br
-.ti -1c
-.RI "#define \fBFD_SET\fP(n, p)   ((p)->fds_bits[(n)/NFDBITS] |= (1 << ((n) % NFDBITS)))"
-.br
-.ti -1c
-.RI "#define \fBFD_CLR\fP(n, p)   ((p)->fds_bits[(n)/NFDBITS] &= ~(1 << ((n) % NFDBITS)))"
-.br
-.ti -1c
-.RI "#define \fBFD_ISSET\fP(n, p)   ((p)->fds_bits[(n)/NFDBITS] & (1 << ((n) % NFDBITS)))"
-.br
-.ti -1c
-.RI "#define \fBFD_ZERO\fP(p)   memset((p), 0, sizeof(*(p)))"
-.br
-.ti -1c
 .RI "#define \fBDEFAULT_COMMUNITY\fP   'public'"
 .br
 .ti -1c
@@ -133,13 +118,6 @@ The Net-SNMP library \-
 .br
 .ti -1c
 .RI "#define \fBERROR_STAT_LENGTH\fP   11"
-.br
-.in -1c
-.SS "Typedefs"
-
-.in +1c
-.ti -1c
-.RI "typedef long \fBfd_mask\fP"
 .br
 .in -1c
 .SS "Functions"
@@ -216,7 +194,7 @@ The Net-SNMP library \-
 .ti -1c
 .RI "void \fBinit_snmp\fP (const char *type)"
 .br
-.RI "\fICalls the functions to do config file loading and mib module parsing in the correct order. \fP"
+.RI "\fICalls the functions to do config file loading and mib \fBmodule\fP parsing in the correct order. \fP"
 .ti -1c
 .RI "void \fBsnmp_store\fP (const char *type)"
 .br
@@ -266,10 +244,22 @@ The Net-SNMP library \-
 .RI "int \fBsnmp_close_sessions\fP (void)"
 .br
 .ti -1c
+.RI "int \fBsnmpv3_header_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_session\fP *session, \fBnetsnmp_pdu\fP *pdu)"
+.br
+.ti -1c
+.RI "int \fBsnmpv3_scopedPDU_header_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_pdu\fP *pdu, size_t body_len)"
+.br
+.ti -1c
+.RI "int \fBsnmpv3_packet_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_session\fP *session, \fBnetsnmp_pdu\fP *pdu, u_char *pdu_data, size_t pdu_data_len)"
+.br
+.ti -1c
 .RI "int \fBsnmpv3_packet_build\fP (\fBnetsnmp_session\fP *session, \fBnetsnmp_pdu\fP *pdu, u_char *packet, size_t *out_length, u_char *pdu_data, size_t pdu_data_len)"
 .br
 .ti -1c
 .RI "u_char * \fBsnmp_pdu_build\fP (\fBnetsnmp_pdu\fP *pdu, u_char *cp, size_t *out_length)"
+.br
+.ti -1c
+.RI "int \fBsnmp_pdu_realloc_rbuild\fP (u_char **pkt, size_t *pkt_len, size_t *offset, \fBnetsnmp_pdu\fP *pdu)"
 .br
 .ti -1c
 .RI "int \fBsnmpv3_parse\fP (\fBnetsnmp_pdu\fP *pdu, u_char *data, size_t *length, u_char **after_header, \fBnetsnmp_session\fP *sess)"
@@ -379,7 +369,7 @@ The Net-SNMP library \-
 .ti -1c
 .RI "\fBnetsnmp_variable_list\fP * \fBsnmp_pdu_add_variable\fP (\fBnetsnmp_pdu\fP *pdu, const oid *name, size_t name_length, u_char type, const void *value, size_t len)"
 .br
-.RI "\fILibrary API routines concerned with variable bindings and values. \fP"
+.RI "\fILibrary API routines concerned with \fBvariable\fP bindings and values. \fP"
 .ti -1c
 .RI "\fBnetsnmp_variable_list\fP * \fBsnmp_varlist_add_variable\fP (\fBnetsnmp_variable_list\fP **varlist, const oid *name, size_t name_length, u_char type, const void *value, size_t len)"
 .br
@@ -470,14 +460,14 @@ The Net-SNMP library \-
 Definition at line 149 of file snmp_api.c.
 .SH "Function Documentation"
 .PP 
-.SS "int _sess_read (void *sessp, \fBnetsnmp_large_fd_set\fP *fdset)"
+.SS "int _sess_read (void * sessp, \fBnetsnmp_large_fd_set\fP * fdset)"
 .PP
 XXX-rks: why no SNMP_FREE(isp->packet); ??
 .PP
 XXX-rks: why no SNMP_FREE(isp->packet); ?? 
 .PP
-Definition at line 5712 of file snmp_api.c.
-.SS "int init_agent (const char *app)"
+Definition at line 5715 of file snmp_api.c.
+.SS "int init_agent (const char * app)"
 .PP
 Initialize the agent. Calls into init_agent_read_config to set tha app's configuration file in the appropriate default storage space, NETSNMP_DS_LIB_APPTYPE. Need to call init_agent before calling init_snmp.
 .PP
@@ -499,9 +489,9 @@ Returns non-zero on failure and zero on success.
 
 .PP
 Definition at line 277 of file snmp_vars.c.
-.SS "void init_snmp (const char *type)"
+.SS "void init_snmp (const char * type)"
 .PP
-Calls the functions to do config file loading and mib module parsing in the correct order. \fBParameters:\fP
+Calls the functions to do config file loading and mib \fBmodule\fP parsing in the correct order. \fBParameters:\fP
 .RS 4
 \fItype\fP label for the config file 'type'
 .RE
@@ -519,7 +509,7 @@ void
 
 .PP
 Definition at line 796 of file snmp_api.c.
-.SS "int netsnmp_oid_compare_ll (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2, size_t *offpt)"
+.SS "int netsnmp_oid_compare_ll (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2, size_t * offpt)"
 .PP
 lexicographical compare two object identifiers and return the point where they differ Caution: this method is called often by command responder applications (ie, agent).
 .PP
@@ -530,8 +520,8 @@ lexicographical compare two object identifiers and return the point where they d
 .PP
 
 .PP
-Definition at line 6713 of file snmp_api.c.
-.SS "int netsnmp_oid_equals (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
+Definition at line 6716 of file snmp_api.c.
+.SS "int netsnmp_oid_equals (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
 .PP
 Compares 2 OIDs to determine if they are exactly equal. This should be faster than doing a snmp_oid_compare for different length OIDs, since the length is checked first and if != returns immediately. Might be very slighly faster if lengths are ==. 
 .PP
@@ -553,8 +543,8 @@ Compares 2 OIDs to determine if they are exactly equal. This should be faster th
 .PP
 
 .PP
-Definition at line 6794 of file snmp_api.c.
-.SS "int netsnmp_oid_find_prefix (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
+Definition at line 6797 of file snmp_api.c.
+.SS "int netsnmp_oid_find_prefix (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
 .PP
 Given two OIDs, determine the common prefix to them both. \fBParameters:\fP
 .RS 4
@@ -574,8 +564,8 @@ length of common prefix 0 if no common prefix, -1 on error.
 .PP
 
 .PP
-Definition at line 6858 of file snmp_api.c.
-.SS "int netsnmp_oid_is_subtree (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
+Definition at line 6861 of file snmp_api.c.
+.SS "int netsnmp_oid_is_subtree (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
 .PP
 Identical to netsnmp_oid_equals, except only the length up to len1 is compared. Functionally, this determines if in_name2 is equal or a subtree of in_name1 
 .PP
@@ -597,8 +587,8 @@ Identical to netsnmp_oid_equals, except only the length up to len1 is compared. 
 .PP
 
 .PP
-Definition at line 6837 of file snmp_api.c.
-.SS "int snmp_oid_compare (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
+Definition at line 6840 of file snmp_api.c.
+.SS "int snmp_oid_compare (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
 .PP
 lexicographical compare two object identifiers. Caution: this method is called often by command responder applications (ie, agent).
 .PP
@@ -609,8 +599,8 @@ lexicographical compare two object identifiers. Caution: this method is called o
 .PP
 
 .PP
-Definition at line 6664 of file snmp_api.c.
-.SS "int snmp_oidtree_compare (const oid *in_name1, size_tlen1, const oid *in_name2, size_tlen2)"
+Definition at line 6667 of file snmp_api.c.
+.SS "int snmp_oidtree_compare (const oid * in_name1, size_t len1, const oid * in_name2, size_t len2)"
 .PP
 Compares 2 OIDs to determine if they are equal up until the shortest length. \fBParameters:\fP
 .RS 4
@@ -630,18 +620,18 @@ Compares 2 OIDs to determine if they are equal up until the shortest length. \fB
 .PP
 
 .PP
-Definition at line 6766 of file snmp_api.c.
-.SS "\fBnetsnmp_variable_list\fP* snmp_pdu_add_variable (\fBnetsnmp_pdu\fP *pdu, const oid *name, size_tname_length, u_chartype, const void *value, size_tlen)"
+Definition at line 6769 of file snmp_api.c.
+.SS "\fBnetsnmp_variable_list\fP* snmp_pdu_add_variable (\fBnetsnmp_pdu\fP * pdu, const oid * name, size_t name_length, u_char type, const void * value, size_t len)"
 .PP
-Library API routines concerned with variable bindings and values. 
+Library API routines concerned with \fBvariable\fP bindings and values. 
 .PP
-Definition at line 6929 of file snmp_api.c.
-.SS "void snmp_sess_init (\fBnetsnmp_session\fP *session)"
+Definition at line 6932 of file snmp_api.c.
+.SS "void snmp_sess_init (\fBnetsnmp_session\fP * session)"
 .PP
 Library API routines concerned with specifying and using SNMP 'sessions' including sending and receiving requests. 
 .PP
 Definition at line 718 of file snmp_api.c.
-.SS "\fBnetsnmp_session\fP* snmp_sess_session_lookup (void *sessp)"
+.SS "\fBnetsnmp_session\fP* snmp_sess_session_lookup (void * sessp)"
 .PP
 Look up a session that already may have been closed. \fBParameters:\fP
 .RS 4
@@ -660,8 +650,8 @@ snmp_sess_session()
 .PP
 
 .PP
-Definition at line 7522 of file snmp_api.c.
-.SS "void snmp_shutdown (const char *type)"
+Definition at line 7525 of file snmp_api.c.
+.SS "void snmp_shutdown (const char * type)"
 .PP
 Shuts down the application, saving any needed persistent storage, and appropriate clean up. \fBParameters:\fP
 .RS 4
@@ -676,7 +666,7 @@ void
 
 .PP
 Definition at line 862 of file snmp_api.c.
-.SS "int snmpv3_engineID_probe (struct \fBsession_list\fP *slp, \fBnetsnmp_session\fP *in_session)"
+.SS "int snmpv3_engineID_probe (struct \fBsession_list\fP * slp, \fBnetsnmp_session\fP * in_session)"
 .PP
 probe for peer engineID \fBParameters:\fP
 .RS 4
@@ -706,7 +696,7 @@ the first session in slp should the internal allocated copy of in_session
 
 .PP
 Definition at line 1377 of file snmp_api.c.
-.SS "int snmpv3_probe_contextEngineID_rfc5343 (void *slp, \fBnetsnmp_session\fP *session)"
+.SS "int snmpv3_probe_contextEngineID_rfc5343 (void * slp, \fBnetsnmp_session\fP * session)"
 .PP
 probe for engineID using RFC 5343 probing mechanisms Designed to be a callback for within a security model's probe_engineid hook. Since it's likely multiple security models won't have engineIDs to probe for then this function is a callback likely to be used by multiple future security models. E.G. both SSH and DTLS. 
 .PP
