--- a/man/netsnmp_mib_utilities.3
+++ b/man/netsnmp_mib_utilities.3
@@ -1,4 +1,4 @@
-.TH "mib parsing and datatype manipulation routines." 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "mib parsing and datatype manipulation routines." 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -63,7 +63,7 @@ mib parsing and datatype manipulation routines. \-
 .ti -1c
 .RI "int \fBsprint_realloc_timeticks\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .br
-.RI "\fIPrints a timetick variable into a buffer. \fP"
+.RI "\fIPrints a timetick \fBvariable\fP into a buffer. \fP"
 .ti -1c
 .RI "int \fBsprint_realloc_hinted_integer\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, long val, const char decimaltype, const char *hint, const char *units)"
 .br
@@ -110,11 +110,11 @@ mib parsing and datatype manipulation routines. \-
 .ti -1c
 .RI "int \fBsprint_realloc_by_type\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
 .br
-.RI "\fIUniversal print routine, prints a variable into a buffer according to the variable type. \fP"
+.RI "\fIUniversal print routine, prints a \fBvariable\fP into a buffer according to the \fBvariable\fP type. \fP"
 .ti -1c
 .RI "struct \fBtree\fP * \fBget_tree_head\fP (void)"
 .br
-.RI "\fIRetrieves the tree head. \fP"
+.RI "\fIRetrieves the \fBtree\fP head. \fP"
 .ti -1c
 .RI "char * \fBsnmp_out_toggle_options\fP (char *options)"
 .br
@@ -210,11 +210,11 @@ mib parsing and datatype manipulation routines. \-
 .ti -1c
 .RI "void \fBprint_variable\fP (const oid *objid, size_t objidlen, const \fBnetsnmp_variable_list\fP *\fBvariable\fP)"
 .br
-.RI "\fIPrints a variable to stdout. \fP"
+.RI "\fIPrints a \fBvariable\fP to stdout. \fP"
 .ti -1c
 .RI "void \fBfprint_variable\fP (FILE *f, const oid *objid, size_t objidlen, const \fBnetsnmp_variable_list\fP *\fBvariable\fP)"
 .br
-.RI "\fIPrints a variable to a file descriptor. \fP"
+.RI "\fIPrints a \fBvariable\fP to a file descriptor. \fP"
 .ti -1c
 .RI "int \fBsprint_realloc_value\fP (u_char **buf, size_t *buf_len, size_t *out_len, int allow_realloc, const oid *objid, size_t objidlen, const \fBnetsnmp_variable_list\fP *\fBvariable\fP)"
 .br
@@ -404,7 +404,7 @@ mib parsing and datatype manipulation routines. \-
 .in -1c
 .SH "Function Documentation"
 .PP 
-.SS "int _sprint_hexstring_line (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const u_char *cp, size_tline_len)"
+.SS "int _sprint_hexstring_line (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const u_char * cp, size_t line_len)"
 .PP
 Prints a hexadecimal string into a buffer. The characters pointed by *cp are encoded as hexadecimal string.
 .PP
@@ -433,16 +433,16 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 
 .PP
 Definition at line 292 of file mib.c.
-.SS "int build_oid (oid **out, size_t *out_len, oid *prefix, size_tprefix_len, \fBnetsnmp_variable_list\fP *indexes)"
+.SS "int build_oid (oid ** out, size_t * out_len, oid * prefix, size_t prefix_len, \fBnetsnmp_variable_list\fP * indexes)"
 .PP
 xxx-rks: should free previous value? 
 .PP
 Definition at line 3731 of file mib.c.
-.SS "int build_oid_segment (\fBnetsnmp_variable_list\fP *var)"
+.SS "int build_oid_segment (\fBnetsnmp_variable_list\fP * var)"
 .PP
 Takes the value in VAR and turns it into an OID segment in var->name. \fBParameters:\fP
 .RS 4
-\fIvar\fP The variable.
+\fIvar\fP The \fBvariable\fP.
 .RE
 .PP
 \fBReturns:\fP
@@ -453,7 +453,7 @@ SNMPERR_SUCCESS or SNMPERR_GENERR
 
 .PP
 Definition at line 3597 of file mib.c.
-.SS "void fprint_description (FILE *f, oid *objid, size_tobjidlen, intwidth)"
+.SS "void fprint_description (FILE * f, oid * objid, size_t objidlen, int width)"
 .PP
 Prints on oid description into a file descriptor. \fBParameters:\fP
 .RS 4
@@ -469,7 +469,7 @@ Prints on oid description into a file descriptor. \fBParameters:\fP
 
 .PP
 Definition at line 4601 of file mib.c.
-.SS "void fprint_objid (FILE *f, const oid *objid, size_tobjidlen)"
+.SS "void fprint_objid (FILE * f, const oid * objid, size_t objidlen)"
 .PP
 Prints an oid to a file descriptor. \fBParameters:\fP
 .RS 4
@@ -483,9 +483,9 @@ Prints an oid to a file descriptor. \fBParameters:\fP
 
 .PP
 Definition at line 3320 of file mib.c.
-.SS "void fprint_variable (FILE *f, const oid *objid, size_tobjidlen, const \fBnetsnmp_variable_list\fP *variable)"
+.SS "void fprint_variable (FILE * f, const oid * objid, size_t objidlen, const \fBnetsnmp_variable_list\fP * variable)"
 .PP
-Prints a variable to a file descriptor. \fBParameters:\fP
+Prints a \fBvariable\fP to a file descriptor. \fBParameters:\fP
 .RS 4
 \fIf\fP The file descriptor to print to. 
 .br
@@ -493,7 +493,7 @@ Prints a variable to a file descriptor. \fBParameters:\fP
 .br
 \fIobjidlen\fP The length of teh object id. 
 .br
-\fIvariable\fP The variable to print. 
+\fI\fBvariable\fP\fP The \fBvariable\fP to print. 
 .RE
 .PP
 
@@ -501,15 +501,15 @@ Prints a variable to a file descriptor. \fBParameters:\fP
 Definition at line 3474 of file mib.c.
 .SS "struct \fBtree\fP* get_tree_head (void)\fC [read]\fP"
 .PP
-Retrieves the tree head. \fBReturns:\fP
+Retrieves the \fBtree\fP head. \fBReturns:\fP
 .RS 4
-the tree head. 
+the \fBtree\fP head. 
 .RE
 .PP
 
 .PP
 Definition at line 2031 of file mib.c.
-.SS "int get_wild_node (const char *name, oid *objid, size_t *objidlen)"\fBSee also:\fP
+.SS "int get_wild_node (const char * name, oid * objid, size_t * objidlen)"\fBSee also:\fP
 .RS 4
 comments on find_best_tree_node for usage after first time. 
 .RE
@@ -524,7 +524,7 @@ swap in the new value and repeat
 Definition at line 2496 of file mib.c.
 .SS "char* netsnmp_get_mib_directory (void)"
 .PP
-Check if the environment variable is set
+Check if the environment \fBvariable\fP is set
 .PP
 Not set use hard coded path 
 .PP
@@ -536,7 +536,7 @@ Initialises the mib reader. Library API routines concerned with MIB files and ob
 Reads in all settings from the environment. 
 .PP
 Definition at line 2543 of file mib.c.
-.SS "int netsnmp_oid2chars (char *C, intL, const oid *O)"
+.SS "int netsnmp_oid2chars (char * C, int L, const oid * O)"
 .PP
 Converts an OID to its character form. in example 5 . 1 . 2 . 3 . 4 . 5 = 12345
 .PP
@@ -559,7 +559,7 @@ Converts an OID to its character form. in example 5 . 1 . 2 . 3 . 4 . 5 = 12345
 length 
 .PP
 Definition at line 6425 of file mib.c.
-.SS "int netsnmp_oid2str (char *S, intL, oid *O)"
+.SS "int netsnmp_oid2str (char * S, int L, oid * O)"
 .PP
 Converts an OID to its string form. in example 5 . 'h' . 'e' . 'l' . 'l' . 'o' = 'hello\\0' (null terminated)
 .PP
@@ -580,7 +580,7 @@ Converts an OID to its string form. in example 5 . 'h' . 'e' . 'l' . 'l' . 'o' =
 
 .PP
 Definition at line 6453 of file mib.c.
-.SS "void netsnmp_set_mib_directory (const char *dir)"
+.SS "void netsnmp_set_mib_directory (const char * dir)"
 .PP
 New dir starts with '+', thus we add it.
 .PP
@@ -589,7 +589,7 @@ If dir starts with '+' skip '+' it.
 set_string calls strdup, so if we allocated memory, free it 
 .PP
 Definition at line 2394 of file mib.c.
-.SS "int netsnmp_str2oid (const char *S, oid *O, intL)"
+.SS "int netsnmp_str2oid (const char * S, oid * O, int L)"
 .PP
 Converts a string to its OID form. in example 'hello' = 5 . 'h' . 'e' . 'l' . 'l' . 'o'
 .PP
@@ -610,7 +610,7 @@ Converts a string to its OID form. in example 'hello' = 5 . 'h' . 'e' . 'l' . 'l
 
 .PP
 Definition at line 6390 of file mib.c.
-.SS "void print_description (oid *objid, size_tobjidlen, intwidth)"
+.SS "void print_description (oid * objid, size_t objidlen, int width)"
 .PP
 Prints on oid description on stdout. \fBSee also:\fP
 .RS 4
@@ -620,7 +620,7 @@ Prints on oid description on stdout. \fBSee also:\fP
 
 .PP
 Definition at line 4585 of file mib.c.
-.SS "void print_mib (FILE *fp)"
+.SS "void print_mib (FILE * fp)"
 .PP
 Prints the MIBs to the file fp. \fBParameters:\fP
 .RS 4
@@ -630,7 +630,7 @@ Prints the MIBs to the file fp. \fBParameters:\fP
 
 .PP
 Definition at line 2901 of file mib.c.
-.SS "void print_objid (const oid *objid, size_tobjidlen)"
+.SS "void print_objid (const oid * objid, size_t objidlen)"
 .PP
 Prints an oid to stdout. \fBParameters:\fP
 .RS 4
@@ -642,21 +642,21 @@ Prints an oid to stdout. \fBParameters:\fP
 
 .PP
 Definition at line 3306 of file mib.c.
-.SS "void print_variable (const oid *objid, size_tobjidlen, const \fBnetsnmp_variable_list\fP *variable)"
+.SS "void print_variable (const oid * objid, size_t objidlen, const \fBnetsnmp_variable_list\fP * variable)"
 .PP
-Prints a variable to stdout. \fBParameters:\fP
+Prints a \fBvariable\fP to stdout. \fBParameters:\fP
 .RS 4
 \fIobjid\fP The object id. 
 .br
 \fIobjidlen\fP The length of teh object id. 
 .br
-\fIvariable\fP The variable to print. 
+\fI\fBvariable\fP\fP The \fBvariable\fP to print. 
 .RE
 .PP
 
 .PP
 Definition at line 3458 of file mib.c.
-.SS "int read_objid (const char *input, oid *output, size_t *out_len)"
+.SS "int read_objid (const char * input, oid * output, size_t * out_len)"
 .PP
 Reads an object identifier from an input string into internal OID form. When called, out_len must hold the maximum length of the output array.
 .PP
@@ -677,7 +677,7 @@ Reads an object identifier from an input string into internal OID form. When cal
 If an error occurs, this function returns 0 and MAY set snmp_errno. snmp_errno is NOT set if SET_SNMP_ERROR evaluates to nothing. This can make multi-threaded use a tiny bit more robust. 
 .PP
 Definition at line 2999 of file mib.c.
-.SS "void set_function (struct \fBtree\fP *subtree)"
+.SS "void set_function (struct \fBtree\fP * subtree)"
 .PP
 Set's the printing function printomat in a subtree according it's type. \fBParameters:\fP
 .RS 4
@@ -692,7 +692,7 @@ Definition at line 2922 of file mib.c.
 Unloads all mibs. 
 .PP
 Definition at line 2867 of file mib.c.
-.SS "void snmp_in_toggle_options_usage (const char *lead, FILE *outf)"
+.SS "void snmp_in_toggle_options_usage (const char * lead, FILE * outf)"
 .PP
 Prints out a help usage for the in* toggle options. \fBParameters:\fP
 .RS 4
@@ -704,7 +704,7 @@ Prints out a help usage for the in* toggle options. \fBParameters:\fP
 
 .PP
 Definition at line 2304 of file mib.c.
-.SS "oid* snmp_parse_oid (const char *argv, oid *root, size_t *rootlen)"
+.SS "oid* snmp_parse_oid (const char * argv, oid * root, size_t * rootlen)"
 .PP
 Given a string, parses an oid out of it (if possible). It will try to parse it based on predetermined configuration if present or by every method possible otherwise. If a suffix has been registered using NETSNMP_DS_LIB_OIDSUFFIX, it will be appended to the input string before processing.
 .PP
@@ -725,7 +725,7 @@ The root oid pointer if successful, or NULL otherwise.
 
 .PP
 Definition at line 5996 of file mib.c.
-.SS "int sprint_realloc_asciistring (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const u_char *cp, size_tlen)"
+.SS "int sprint_realloc_asciistring (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const u_char * cp, size_t len)"
 .PP
 Prints an ascii string into a buffer. The characters pointed by *cp are encoded as an ascii string.
 .PP
@@ -754,7 +754,7 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 
 .PP
 Definition at line 388 of file mib.c.
-.SS "int sprint_realloc_badtype (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_badtype (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -768,9 +768,9 @@ Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. I
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -785,7 +785,7 @@ Fallback routine for a bad type, prints 'Variable has bad type' into a buffer. I
 
 .PP
 Definition at line 1916 of file mib.c.
-.SS "int sprint_realloc_bitstring (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_bitstring (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints a bit string into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -799,9 +799,9 @@ Prints a bit string into a buffer. If allow_realloc is true the buffer will be (
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -816,9 +816,9 @@ Prints a bit string into a buffer. If allow_realloc is true the buffer will be (
 
 .PP
 Definition at line 1777 of file mib.c.
-.SS "int sprint_realloc_by_type (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_by_type (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
-Universal print routine, prints a variable into a buffer according to the variable type. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
+Universal print routine, prints a \fBvariable\fP into a buffer according to the \fBvariable\fP type. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
 \fBParameters:\fP
 .RS 4
@@ -830,9 +830,9 @@ Universal print routine, prints a variable into a buffer according to the variab
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -847,7 +847,7 @@ Universal print routine, prints a variable into a buffer according to the variab
 
 .PP
 Definition at line 1951 of file mib.c.
-.SS "int sprint_realloc_counter (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_counter (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints a counter value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -861,9 +861,9 @@ Prints a counter value into a buffer. If allow_realloc is true the buffer will b
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -878,9 +878,9 @@ Prints a counter value into a buffer. If allow_realloc is true the buffer will b
 
 .PP
 Definition at line 1544 of file mib.c.
-.SS "int sprint_realloc_counter64 (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_counter64 (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
-Prints a counter into a buffer. The variable var is encoded as a counter value.
+Prints a counter into a buffer. The \fBvariable\fP var is encoded as a counter value.
 .PP
 If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -894,9 +894,9 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -911,7 +911,7 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 
 .PP
 Definition at line 860 of file mib.c.
-.SS "int sprint_realloc_gauge (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_gauge (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints a gauge value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -925,9 +925,9 @@ Prints a gauge value into a buffer. If allow_realloc is true the buffer will be 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -942,7 +942,7 @@ Prints a gauge value into a buffer. If allow_realloc is true the buffer will be 
 
 .PP
 Definition at line 1471 of file mib.c.
-.SS "int sprint_realloc_hinted_integer (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, longval, const chardecimaltype, const char *hint, const char *units)"
+.SS "int sprint_realloc_hinted_integer (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, long val, const char decimaltype, const char * hint, const char * units)"
 .PP
 Prints an integer according to the hint into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -956,9 +956,9 @@ Prints an integer according to the hint into a buffer. If allow_realloc is true 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIval\fP The variable to encode. 
+\fIval\fP The \fBvariable\fP to encode. 
 .br
-\fIdecimaltype\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIdecimaltype\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may _NOT_ be NULL. 
 .br
@@ -973,7 +973,7 @@ Prints an integer according to the hint into a buffer. If allow_realloc is true 
 
 .PP
 Definition at line 1197 of file mib.c.
-.SS "int sprint_realloc_integer (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_integer (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints an integer into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -987,9 +987,9 @@ Prints an integer into a buffer. If allow_realloc is true the buffer will be (re
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1004,7 +1004,7 @@ Prints an integer into a buffer. If allow_realloc is true the buffer will be (re
 
 .PP
 Definition at line 1271 of file mib.c.
-.SS "int sprint_realloc_ipaddress (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_ipaddress (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints an ip-address into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1018,9 +1018,9 @@ Prints an ip-address into a buffer. If allow_realloc is true the buffer will be 
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1035,7 +1035,7 @@ Prints an ip-address into a buffer. If allow_realloc is true the buffer will be 
 
 .PP
 Definition at line 1673 of file mib.c.
-.SS "int sprint_realloc_networkaddress (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_networkaddress (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints a network address into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1049,9 +1049,9 @@ Prints a network address into a buffer. If allow_realloc is true the buffer will
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1066,7 +1066,7 @@ Prints a network address into a buffer. If allow_realloc is true the buffer will
 
 .PP
 Definition at line 1607 of file mib.c.
-.SS "int sprint_realloc_null (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_null (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints a null value into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1080,9 +1080,9 @@ Prints a null value into a buffer. If allow_realloc is true the buffer will be (
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1097,7 +1097,7 @@ Prints a null value into a buffer. If allow_realloc is true the buffer will be (
 
 .PP
 Definition at line 1733 of file mib.c.
-.SS "int sprint_realloc_object_identifier (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_object_identifier (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints an object identifier into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1111,9 +1111,9 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1128,9 +1128,9 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 
 .PP
 Definition at line 1053 of file mib.c.
-.SS "int sprint_realloc_octet_string (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_octet_string (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
-Prints an octet string into a buffer. The variable var is encoded as octet string.
+Prints an octet string into a buffer. The \fBvariable\fP var is encoded as octet string.
 .PP
 If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1144,9 +1144,9 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1161,7 +1161,7 @@ If allow_realloc is true the buffer will be (re)allocated to fit in the needed s
 
 .PP
 Definition at line 448 of file mib.c.
-.SS "int sprint_realloc_opaque (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_opaque (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints an object identifier into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1175,9 +1175,9 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1192,9 +1192,9 @@ Prints an object identifier into a buffer. If allow_realloc is true the buffer w
 
 .PP
 Definition at line 963 of file mib.c.
-.SS "int sprint_realloc_timeticks (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_timeticks (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
-Prints a timetick variable into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
+Prints a timetick \fBvariable\fP into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
 \fBParameters:\fP
 .RS 4
@@ -1206,9 +1206,9 @@ Prints a timetick variable into a buffer. If allow_realloc is true the buffer wi
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1223,7 +1223,7 @@ Prints a timetick variable into a buffer. If allow_realloc is true the buffer wi
 
 .PP
 Definition at line 1123 of file mib.c.
-.SS "int sprint_realloc_uinteger (u_char **buf, size_t *buf_len, size_t *out_len, intallow_realloc, const \fBnetsnmp_variable_list\fP *var, const struct \fBenum_list\fP *enums, const char *hint, const char *units)"
+.SS "int sprint_realloc_uinteger (u_char ** buf, size_t * buf_len, size_t * out_len, int allow_realloc, const \fBnetsnmp_variable_list\fP * var, const struct \fBenum_list\fP * enums, const char * hint, const char * units)"
 .PP
 Prints an unsigned integer into a buffer. If allow_realloc is true the buffer will be (re)allocated to fit in the needed size. (Note: *buf may change due to this.)
 .PP
@@ -1237,9 +1237,9 @@ Prints an unsigned integer into a buffer. If allow_realloc is true the buffer wi
 .br
 \fIallow_realloc\fP if not zero reallocate the buffer to fit the needed size. 
 .br
-\fIvar\fP The variable to encode. 
+\fIvar\fP The \fBvariable\fP to encode. 
 .br
-\fIenums\fP The enumeration ff this variable is enumerated. may be NULL. 
+\fIenums\fP The enumeration ff this \fBvariable\fP is enumerated. may be NULL. 
 .br
 \fIhint\fP Contents of the DISPLAY-HINT clause of the MIB. See RFC 1903 Section 3.1 for details. may be NULL. 
 .br
@@ -1254,7 +1254,7 @@ Prints an unsigned integer into a buffer. If allow_realloc is true the buffer wi
 
 .PP
 Definition at line 1374 of file mib.c.
-.SS "char* uptime_string (u_longtimeticks, char *buf)"
+.SS "char* uptime_string (u_long timeticks, char * buf)"
 .PP
 Converts timeticks to hours, minutes, seconds string. CMU compatible does not show centiseconds.
 .PP
