--- a/man/netsnmp_netsnmp_mib_handler_access_methods.3
+++ b/man/netsnmp_netsnmp_mib_handler_access_methods.3
@@ -1,4 +1,4 @@
-.TH "netsnmp_mib_handler_access_methods" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "netsnmp_mib_handler_access_methods" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
