--- a/man/netsnmp_null_container.3
+++ b/man/netsnmp_null_container.3
@@ -1,4 +1,4 @@
-.TH "null_container" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "null_container" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
