--- a/man/netsnmp_snmp_logging.3
+++ b/man/netsnmp_snmp_logging.3
@@ -1,4 +1,4 @@
-.TH "generic logging for net-snmp" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "generic logging for net-snmp" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -11,39 +11,6 @@ generic logging for net-snmp \-
 .br
 .ti -1c
 .RI "#define \fBva_copy\fP(dest, src)   memcpy (&dest, &src, sizeof (va_list))"
-.br
-.ti -1c
-.RI "#define \fBLOG_CONS\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_PID\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL0\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL1\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL2\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL3\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL4\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL5\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL6\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_LOCAL7\fP   0"
-.br
-.ti -1c
-.RI "#define \fBLOG_DAEMON\fP   0"
 .br
 .ti -1c
 .RI "#define \fBLOG_USER\fP   0"
@@ -167,11 +134,11 @@ generic logging for net-snmp \-
 .ti -1c
 .RI "int \fBsnmp_vlog\fP (int priority, const char *format, va_list ap)"
 .br
-.RI "\fIThis snmp logging function allows variable argument list given the specified priority, format and a populated va_list structure. \fP"
+.RI "\fIThis snmp logging function allows \fBvariable\fP argument list given the specified priority, format and a populated va_list structure. \fP"
 .ti -1c
 .RI "int \fBsnmp_log\fP (int priority, const char *format,...)"
 .br
-.RI "\fIThis snmp logging function allows variable argument list given the specified format and priority. \fP"
+.RI "\fIThis snmp logging function allows \fBvariable\fP argument list given the specified format and priority. \fP"
 .ti -1c
 .RI "void \fBsnmp_log_perror\fP (const char *s)"
 .br
@@ -206,9 +173,9 @@ Returns 0 if logging is off, 1 when it is done.
 
 .PP
 Definition at line 514 of file snmp_logging.c.
-.SS "int snmp_log (intpriority, const char *format, ...)"
+.SS "int snmp_log (int priority, const char * format,  ...)"
 .PP
-This snmp logging function allows variable argument list given the specified format and priority. Calls the snmp_vlog function. The default logfile this function writes to is /var/log/snmpd.log.
+This snmp logging function allows \fBvariable\fP argument list given the specified format and priority. Calls the snmp_vlog function. The default logfile this function writes to is /var/log/snmpd.log.
 .PP
 \fBSee also:\fP
 .RS 4
@@ -222,9 +189,9 @@ This snmp logging function allows variable argument list given the specified for
 \fBdelayed_instance.c\fP.
 .PP
 Definition at line 1286 of file snmp_logging.c.
-.SS "int snmp_vlog (intpriority, const char *format, va_listap)"
+.SS "int snmp_vlog (int priority, const char * format, va_list ap)"
 .PP
-This snmp logging function allows variable argument list given the specified priority, format and a populated va_list structure. The default logfile this function writes to is /var/log/snmpd.log.
+This snmp logging function allows \fBvariable\fP argument list given the specified priority, format and a populated va_list structure. The default logfile this function writes to is /var/log/snmpd.log.
 .PP
 \fBParameters:\fP
 .RS 4
@@ -259,7 +226,7 @@ LOG_DEBUG debug-level messages
 
 .PP
 .br
-\fIformat\fP is a pointer to a char representing the variable argument list format used.
+\fIformat\fP is a pointer to a char representing the \fBvariable\fP argument list format used.
 .br
 \fIap\fP is a va_list type used to traverse the list of arguments.
 .RE
