--- a/man/netsnmp_snmp_pdu.3
+++ b/man/netsnmp_snmp_pdu.3
@@ -1,4 +1,4 @@
-.TH "snmp_pdu" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "snmp_pdu" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -41,11 +41,11 @@ The snmp protocol data unit.
 .ti -1c
 .RI "long \fBerrstat\fP"
 .br
-.RI "\fIError status (non_repeaters in GetBulk) \fP"
+.RI "\fIError status (non_repeaters in GetBulk). \fP"
 .ti -1c
 .RI "long \fBerrindex\fP"
 .br
-.RI "\fIError index (max_repetitions in GetBulk) \fP"
+.RI "\fIError index (max_repetitions in GetBulk). \fP"
 .ti -1c
 .RI "u_long \fBtime\fP"
 .br
@@ -203,12 +203,12 @@ System OID.
 Definition at line 232 of file types.h.
 .SS "long \fBsnmp_pdu::errindex\fP"
 .PP
-Error index (max_repetitions in GetBulk) 
+Error index (max_repetitions in GetBulk). 
 .PP
 Definition at line 192 of file types.h.
 .SS "long \fBsnmp_pdu::errstat\fP"
 .PP
-Error status (non_repeaters in GetBulk) 
+Error status (non_repeaters in GetBulk). 
 .PP
 Definition at line 190 of file types.h.
 .SS "long \fBsnmp_pdu::msgid\fP"
