--- a/man/netsnmp_table_generic.3
+++ b/man/netsnmp_table_generic.3
@@ -1,4 +1,4 @@
-.TH "generic_table_API" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "generic_table_API" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
