--- a/man/netsnmp_table_rows.3
+++ b/man/netsnmp_table_rows.3
@@ -1,4 +1,4 @@
-.TH "table_rows" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "table_rows" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -47,44 +47,44 @@ Routines for working with the rows of a table.
 Routines for working with the rows of a table. 
 .SH "Function Documentation"
 .PP 
-.SS "int netsnmp_generic_row_count (void *table)"
+.SS "int netsnmp_generic_row_count (void * table)"
 .PP
 Report the number of rows in the table. 
 .PP
 Definition at line 282 of file table_generic.c.
-.SS "void* netsnmp_generic_row_first (void *table)"
+.SS "void* netsnmp_generic_row_first (void * table)"
 .PP
 Retrieve the first row of the table. 
 .PP
 Definition at line 228 of file table_generic.c.
-.SS "void* netsnmp_generic_row_get (void *table, void *row)"
+.SS "void* netsnmp_generic_row_get (void * table, void * row)"
 .PP
 Retrieve the given row from the table. This could either be the same data pointer, passed in, or a separate row structure sharing the same index values (or NULL).
 .PP
 This routine also provides a means to tell whether a given row is present in the table. 
 .PP
 Definition at line 240 of file table_generic.c.
-.SS "void* netsnmp_generic_row_get_byidx (void *table, \fBnetsnmp_variable_list\fP *indexes)"
+.SS "void* netsnmp_generic_row_get_byidx (void * table, \fBnetsnmp_variable_list\fP * indexes)"
 .PP
 Retrieve the row with the specified index values. 
 .PP
 Definition at line 255 of file table_generic.c.
-.SS "void* netsnmp_generic_row_get_byoid (void *table, oid *instance, size_tlen)"
+.SS "void* netsnmp_generic_row_get_byoid (void * table, oid * instance, size_t len)"
 .PP
 Retrieve the row with the specified instance OIDs. 
 .PP
 Definition at line 270 of file table_generic.c.
-.SS "void* netsnmp_generic_row_next (void *table, void *row)"
+.SS "void* netsnmp_generic_row_next (void * table, void * row)"
 .PP
 Retrieve the following row from the table. If the specified row is not present, this routine should return the entry next after the position this row would have occupied. 
 .PP
 Definition at line 249 of file table_generic.c.
-.SS "void* netsnmp_generic_row_next_byidx (void *table, \fBnetsnmp_variable_list\fP *indexes)"
+.SS "void* netsnmp_generic_row_next_byidx (void * table, \fBnetsnmp_variable_list\fP * indexes)"
 .PP
 Retrieve the next row after the specified index values. 
 .PP
 Definition at line 262 of file table_generic.c.
-.SS "void* netsnmp_generic_row_next_byoid (void *table, oid *instance, size_tlen)"
+.SS "void* netsnmp_generic_row_next_byoid (void * table, oid * instance, size_t len)"
 .PP
 Retrieve the next row after the specified instance OIDs. 
 .PP
