--- a/man/netsnmp_variable_list.3
+++ b/man/netsnmp_variable_list.3
@@ -1,10 +1,10 @@
-.TH "variable_list" 3 "Mon May 7 2012" "Version 5.5.2.rc1" "net-snmp" \" -*- nroff -*-
+.TH "variable_list" 3 "31 May 2012" "Version 5.5.2.rc2" "net-snmp" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
 variable_list \- 
 .PP
-The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_list.  
+The netsnmp \fBvariable\fP list binding structure, it's typedef'd to netsnmp_variable_list.  
 
 .SH SYNOPSIS
 .br
@@ -17,11 +17,11 @@ The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_
 .ti -1c
 .RI "struct \fBvariable_list\fP * \fBnext_variable\fP"
 .br
-.RI "\fINULL for last variable. \fP"
+.RI "\fINULL for last \fBvariable\fP. \fP"
 .ti -1c
 .RI "oid * \fBname\fP"
 .br
-.RI "\fIObject identifier of variable. \fP"
+.RI "\fIObject identifier of \fBvariable\fP. \fP"
 .ti -1c
 .RI "size_t \fBname_length\fP"
 .br
@@ -29,11 +29,11 @@ The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_
 .ti -1c
 .RI "u_char \fBtype\fP"
 .br
-.RI "\fIASN type of variable. \fP"
+.RI "\fIASN type of \fBvariable\fP. \fP"
 .ti -1c
 .RI "\fBnetsnmp_vardata\fP \fBval\fP"
 .br
-.RI "\fIvalue of variable \fP"
+.RI "\fIvalue of \fBvariable\fP \fP"
 .ti -1c
 .RI "size_t \fBval_len\fP"
 .br
@@ -60,7 +60,7 @@ The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_
 .in -1c
 .SH "Detailed Description"
 .PP 
-The netsnmp variable list binding structure, it's typedef'd to netsnmp_variable_list. 
+The netsnmp \fBvariable\fP list binding structure, it's typedef'd to netsnmp_variable_list. 
 .PP
 \fBExamples: \fP
 .in +1c
@@ -83,11 +83,9 @@ Definition at line 157 of file types.h.
 .SS "void(* \fBvariable_list::dataFreeHook\fP)(void *)"
 .PP
 callback to free above 
-.PP
-Definition at line 159 of file types.h.
 .SS "oid* \fBvariable_list::name\fP"
 .PP
-Object identifier of variable. 
+Object identifier of \fBvariable\fP. 
 .PP
 Definition at line 143 of file types.h.
 .SS "size_t \fBvariable_list::name_length\fP"
@@ -100,14 +98,14 @@ Definition at line 145 of file types.h.
 buffer to hold the OID 
 .PP
 Definition at line 153 of file types.h.
-.SS "struct \fBvariable_list\fP* \fBvariable_list::next_variable\fP"
+.SS "struct \fBvariable_list\fP* \fBvariable_list::next_variable\fP\fC [read]\fP"
 .PP
-NULL for last variable. 
+NULL for last \fBvariable\fP. 
 .PP
 Definition at line 141 of file types.h.
 .SS "u_char \fBvariable_list::type\fP"
 .PP
-ASN type of variable. 
+ASN type of \fBvariable\fP. 
 .PP
 \fBExamples: \fP
 .in +1c
@@ -116,7 +114,7 @@ ASN type of variable.
 Definition at line 147 of file types.h.
 .SS "\fBnetsnmp_vardata\fP \fBvariable_list::val\fP"
 .PP
-value of variable 
+value of \fBvariable\fP 
 .PP
 \fBExamples: \fP
 .in +1c
